--- a/app/data/index.html
+++ b/app/data/index.html
@@ -3,7 +3,7 @@
         function loadPage() {
             setTimeout(function () {
                 w2ui["layout"].toggle('top', window.instant);
-                w2ui["layout"].set('top', { size: 62, title: 'Support Safepremium Group Apps ver 1.1.18' });
+                w2ui["layout"].set('top', { size: 62, title: 'Safepremium Support Group Apps ver 1.1.18' });
                 w2ui["layout"].refresh('top');
                 w2ui['layout'].load('top', 'app/data/W2uiToolbar.html');
                 w2ui['layout'].load('main', 'app/data/start.html');
