--- a/app/data/login.html
+++ b/app/data/login.html
@@ -11,18 +11,22 @@
 
 
 </style>
-
+ 
 <div class="outer-div">
-    <div id="form" style="width: 500px;" class="center-div"></div>
+    <div id="loginForm" style="width: 500px;" class="center-div"></div>  
 </div>
 
 <script type="text/javascript">
     $(function () {
+        
+        var url = 'http://localhost:8081/orcv2';
+
         $().w2destroy('loginForm');
-        $('#form').w2form({ 
+        $('#loginForm').w2form({ 
             name   : 'loginForm',
-            header : 'Login',
-            url    : 'http://localhost:8081/orcv2',
+            header : 'Iniciar Sessão',
+            recid      : 100,
+            url: url,
             fields : [
                 { field: 'email', type: 'email', required: true, html: { caption: 'User Email', attr: 'style="width: 300px"' } },
                 { field: 'password',  type: 'password', required: true, html: { caption: 'Password', attr: 'style="width: 300px"' } }
@@ -34,23 +38,20 @@
             },
             actions: {
                 'Login': function (event) {
-                    var obj = this;
-                    this.save({}, function (data) {
-                        debugger;
-                        if (data.status == 'error') {
-                            console.log('ERROR: ' + data.message);
-                            return;
-                        }
-                        obj.clear();
-			        });
-                    this.error(function(){
-                        debugger;
-                    })
+                    debugger;
+                    if(this.validate()) {
+                        this.save({test: 123}, function(res) {
+                            debugger;
+                        });
+                    }
                 },
                 'Clear': function (event) {
                     console.log('clear', event);
                     this.clear();
                 }
+            },
+            onError: function(event) {
+                event.preventDefault();
             }
         });
     });
