[modes] w2ui aps

--- a/app/data/login.html
+++ b/app/data/login.html
@@ -38,7 +38,7 @@
                 REQ_INPUTS: {origin:'w2ui'}
             },
             actions: {
-                'Login': function (event) {
+                'Sign-In': function (event) {
                     debugger;
                     if(this.validate()) {
                         this.save({test: 123}, function(res) {
