--- a/app/data/start.html
+++ b/app/data/start.html
@@ -1,1 +1,4 @@
-<h1>Start</h1>
+<section style="position: absolute;top: 0;bottom: 0;left: 10px;right: 10px;margin: 10px;padding: 10px;background-color: #d0dff2;">
+        <h1>Start</h1>
+
+</section>
