--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script type="text/javascript">
     var pstyle = 'border: 1px solid #dfdfdf; ';
     $(function () {
+        debugger;
         w2utils.settings.dataType = 'JSON';
         setTimeout(function (point) {
             if (point === 'init') {
@@ -40,6 +41,7 @@
                     }    
                 });
                 //w2ui['layout'].content('main', 'This is some content set manually');
+             
                 w2ui['layout'].load('main', 'app/data/index.html');
                 w2ui['layout'].toggle('top', window.instant);
                 w2ui['layout'].toggle('left', window.instant);
