[server] tokens - http header

--- a/app/data/index.html
+++ b/app/data/index.html
@@ -2,13 +2,9 @@
     <script>
         function loadPage() {
             setTimeout(function () {
-                var hash = 'app/data/start.html';
-                if (self.location.hash) {
-                    hash = self.location.hash.substr(1);
-                }
-                debugger;
+                var hash = self.location.hash ? self.location.hash.substr(1) : 'app/data/start.html';
                 w2ui["layout"].toggle('top', window.instant);
-                w2ui["layout"].set('top', { size: 62, title: '.:: Safepremium Group Support .:: ver 1.1.18' });
+                w2ui["layout"].set('top', { size: 62, title: '.:: Safepremium Group Support ::. [ver1.1.18]' });
                 w2ui["layout"].refresh('top');
                 w2ui['layout'].load('top', 'app/data/W2uiToolbar.html');
                 w2ui['layout'].load('main', hash);
@@ -19,7 +15,6 @@
             if (w2ui) {
                 loadPage();
             } else {
-                console.log(123);
                 setTimeout(awaitLoaded, 100);
             }
         }
