--- a/app/data/W2uiToolbar.html
+++ b/app/data/W2uiToolbar.html
@@ -1,13 +1,16 @@
 <div id="orc_toolbar"></div>
 
 <script>
+    /**
     var urlcfgpath = '/app/simulator/start.json';
     var cfg = {};
     $.getJSON(urlcfgpath, function(doc, textStatus, httpResponse){
         console.log('Path:' + urlcfgpath + ' * text status:' + textStatus);
     }).complete(function(doc, textStatus){
         if (doc.responseJSON) {
-            cfg = doc.responseJSON.orc_toolbar
+            debugger
+            window['orcfg'] = doc.responseJSON
+            cfg = window['orcfg'].orc_toolbar
             if(w2ui['orc_toolbar']){
                 $().w2destroy('orc_toolbar');
             }
@@ -25,5 +28,17 @@
         }        
     }).error(function(doc, textStatus, httpResponse){
         alert('Ocorreu um erro: ' + httpResponse);
+    });
+    **/
+    if(w2ui['orc_toolbar']){$().w2destroy('orc_toolbar');}
+    const cfg = orcsettings.orc_toolbar
+    $('#orc_toolbar').w2toolbar(cfg);
+    w2ui.orc_toolbar.on('click', function (event) {
+        try {
+            w2ui['layout'].load('main', event.object.route);
+            //w2ui['layout'].refresh();
+        } catch (error) {
+             alert('error')
+        }
     });
 </script>
