--- a/app/data/recoveryPassword.html
+++ b/app/data/recoveryPassword.html
@@ -34,9 +34,9 @@
                     name   : 'recoveryPwdForm',
                     header : 'Recuperar Conta',
                     recid  : 300,
-                    url: orcsettings.server.serverUrlApi,
+                    url: {save:orcsettings.server.serverUrlApi},
                     method: 'POST',
-                    fields : [{field: 'email', type: 'email', required: true, html: { caption: 'User Email', attr: 'style="width: 300px"' } }],
+                    fields : [{name: 'email', type: 'email', required: true, html: { caption: 'User Email', attr: 'style="width: 300px"' } }],
                     postData: {
                         REQ_CONTEX : 9999, 
                         REQ_ACTION : 4000,
@@ -46,9 +46,21 @@
                         'Recovery Account': function (event) {
                             if(this.validate()) {
                                 this.save({login: new Date}, function(res) {
-                                    
                                     debugger
-                                    
+                                    if (w2ui.recoveryPwdForm.postData.REQ_ACTION === 4000) {
+                                        w2ui.recoveryPwdForm.postData.REQ_ACTION = 4001
+                                    } else if (w2ui.recoveryPwdForm.postData.REQ_ACTION === 4001) {
+                                        w2ui.recoveryPwdForm.postData.REQ_ACTION = 4002
+                                    }
+                                    //let formAction = 
+                                    var fields = res.dataresponse.output.success.fields
+                                    for (let index = 0; index < fields.length; index++) {
+                                        const item = fields[index];
+                                        w2ui.recoveryPwdForm.fields.push(item)
+                                    }
+                                    w2ui.recoveryPwdForm.formHTML = w2ui.recoveryPwdForm.generateHTML()
+                                    w2ui.recoveryPwdForm.render()
+
                                 });
                             }
                         },
