--- a/app/data/recoveryPassword.html
+++ b/app/data/recoveryPassword.html
@@ -1,5 +1,4 @@
 <style>
-
         .center-div
         {
           position: absolute;
@@ -17,7 +16,7 @@
         <script type="text/javascript">
 
             $(function () {
-                
+                const defaultField = {name: 'email', type: 'email', required: true, html: { caption: 'User Email', attr: 'style="width: 300px"' } }
                 $().w2destroy('recoveryPwdForm');
                 $('#recoveryPwdForm').w2form({ 
                     name   : 'recoveryPwdForm',
@@ -25,7 +24,7 @@
                     recid  : 300,
                     url: {save:orcsettings.server.serverUrlApi},
                     method: 'POST',
-                    fields : [{name: 'email', type: 'email', required: true, html: { caption: 'User Email', attr: 'style="width: 300px"' } }],
+                    fields : [defaultField],
                     postData: {
                         REQ_CONTEX : orcsettings.ApiPolicy.services.w2ui, 
                         REQ_ACTION : orcsettings.ApiPolicy.ACCOUNT_RECOVERY_EMAIL,
@@ -90,6 +89,12 @@
                                 who.disabled = false;
                                 return who.disabled
                             })
+                            w2ui.recoveryPwdForm.postData.REQ_ACTION = orcsettings.ApiPolicy.ACCOUNT_RECOVERY_EMAIL
+                            w2ui.recoveryPwdForm.fields = [defaultField]
+                            w2ui.recoveryPwdForm.record = {}
+                            w2ui.recoveryPwdForm.refresh()
+                            w2ui.recoveryPwdForm.formHTML = w2ui.recoveryPwdForm.generateHTML()
+                            w2ui.recoveryPwdForm.render()
                             this.clear();        
                         }
                     }
