--- a/app/data/W2uiToolbar.html
+++ b/app/data/W2uiToolbar.html
@@ -1,15 +1,20 @@
 <div id="orc_toolbar"></div>
 
 <script>
+    debugger
     if(w2ui['orc_toolbar']){$().w2destroy('orc_toolbar');}
-    const cfg = orcsettings.orc_toolbar
-    $('#orc_toolbar').w2toolbar(cfg);
-    w2ui.orc_toolbar.on('click', function (event) {
-        try {
-            w2ui['layout'].load('main', event.object.route);
-            //w2ui['layout'].refresh();
-        } catch (error) {
-             alert('error', error)
-        }
-    });
+    if (typeof orcsettings === "undefined") {
+        w2ui.layout.lock('main', 'erro ao sincronizar dados...', true)
+    } else {
+        const cfg = orcsettings.orc_toolbar
+        $('#orc_toolbar').w2toolbar(cfg);
+        w2ui.orc_toolbar.on('click', function (event) {
+            try {
+                w2ui['layout'].load('main', event.object.route)
+                //w2ui['layout'].refresh();
+            } catch (error) {
+                alert('error', error)
+            }
+        })
+    }   
 </script>
