--- a/app/data/W2uiToolbar.html
+++ b/app/data/W2uiToolbar.html
@@ -1,8 +1,9 @@
 <div id="orc_toolbar"></div>
 
 <script>
-    debugger
+    
     if(w2ui['orc_toolbar']){$().w2destroy('orc_toolbar');}
+
     if (typeof orcsettings === "undefined") {
         w2ui.layout.lock('main', 'erro ao sincronizar dados...', true)
     } else {
@@ -10,6 +11,10 @@
         $('#orc_toolbar').w2toolbar(cfg);
         w2ui.orc_toolbar.on('click', function (event) {
             try {
+                
+                orcsettings.w2uiGlobal.destroy('orc_sidebar')
+                w2ui['layout'].hide('left');
+
                 w2ui['layout'].load('main', event.object.route)
                 //w2ui['layout'].refresh();
             } catch (error) {
