--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Support Safepremium Group Apps </title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="css/fontawesome/fontawesome-all.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/w2ui/w2ui-1.5.rc1.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />    
+    <link href="css/w2ui/w2ui-1.5.rc1.min.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="css/index.css" rel="stylesheet" type="text/css" media="screen"  />    
     <script src="js/jquery/jquery.min.js"></script>
     <script src="js/w2ui/w2ui-1.5.rc1.js"></script>
     <script src="js/index.js"></script>
@@ -17,10 +17,6 @@
 
     <div id="layout" style="position: absolute; top: 0; left: 0; bottom: 0; right: 0;"></div>
 
-<script type="text/javascript">
-    $(function () {
-        setTimeout(orctokenmanager.loadPage, 100)
-    });
-</script>
+    <script type="text/javascript">$(function () {setTimeout(orctokenmanager.loadPage, 100)});</script>
 </body>
 </html>
