--- a/app/data/dashboard.html
+++ b/app/data/dashboard.html
@@ -7,7 +7,7 @@
             w2ui['layout'].show('left')
 
             w2ui['layout'].load('left', 'app/data/sidebar.html');
-            w2ui['layout'].load('top', 'app/data/W2uiToolbar.html');
+            //w2ui['layout'].load('top', 'app/data/W2uiToolbar.html');
         });
     </script>
 </div>
