--- a/app/data/dashboard.html
+++ b/app/data/dashboard.html
@@ -6,8 +6,11 @@
 
             w2ui['layout'].show('left')
 
-            w2ui['layout'].load('left', 'app/data/sidebar.html');
+            w2ui['layout'].load('left', 'app/data/W2uiSidebar.html');
             //w2ui['layout'].load('top', 'app/data/W2uiToolbar.html');
+
+            w2ui.layout.set('top', {title:'.:: Safepremium Group Support ::. [ver1.1.18] :: Welcome' })
+            w2ui.layout.refresh('top')
         });
     </script>
 </div>
