--- a/app/data/W2uiSidebar.html
+++ b/app/data/W2uiSidebar.html
@@ -7,10 +7,9 @@
 <script>
     $(function () {
 
-    function sidebarLoaded (event) {
+    function sidebarLoaded (_layout) {
         debugger
-        console.log('the sidebar has been loaded!!')
-        // console.log(event.toolbar)
+        _layout
     }
 
     $(function () {
