--- a/app/data/dashboard.html
+++ b/app/data/dashboard.html
@@ -1,6 +1,35 @@
 <div>
-    <script>
+
+
+    <div style="border: 1px solid silver; background-color: #00ee77; float: left; width: 200px; height: 120px; margin: 5px; padding: 30px; text-align: center">
+        some image
+    </div>
+    <div style="border: 1px solid silver; background-color: #00ee77; float: left; width: 200px; height: 120px; margin: 5px; padding: 30px; text-align: center">
+        some image
+    </div>
+    <div style="border: 1px solid silver; background-color: #00ee77; float: left; width: 200px; height: 120px; margin: 5px; padding: 30px; text-align: center">
+        some image
+    </div>
+    <div style="border: 1px solid silver; background-color: #00ee77; float: left; width: 200px; height: 120px; margin: 5px; padding: 30px; text-align: center">
+        some image
+    </div>
+    <div style="border: 1px solid silver; background-color: #00ee77; float: left; width: 200px; height: 120px; margin: 5px; padding: 30px; text-align: center">
+        some image
+    </div>
+    <div style="border: 1px solid silver; background-color: #00ee77; float: left; width: 200px; height: 120px; margin: 5px; padding: 30px; text-align: center">
+        some image
+    </div>
+    <div style="border: 1px solid silver; background-color: #00ee77; float: left; width: 200px; height: 120px; margin: 5px; padding: 30px; text-align: center">
+        some image
+    </div>
+    <div style="border: 1px solid silver; background-color: #00ee77; float: left; width: 200px; height: 120px; margin: 5px; padding: 30px; text-align: center">
+        some image
+    </div>
+
+
+<script>
         $(function () {
+            debugger
             w2ui["layout"].set('left', { size: 200, title: ''});
             w2ui["layout"].refresh('left');
 
@@ -11,6 +40,15 @@
 
             w2ui.layout.set('top', {title:'.:: Safepremium Group Support ::. [ver1.1.18] :: Welcome' })
             w2ui.layout.refresh('top')
+
+            w2ui.layout.get('main').content = ''
+            w2ui.layout.refresh('main')
+
+            w2ui.layout.load('main', '/app/data/infoApp.html', 'slide-left', function () {
+                console.log('content loaded');
+            });
+
+
         });
     </script>
 </div>
