--- a/app/data/W2uiToolbar.html
+++ b/app/data/W2uiToolbar.html
@@ -1,14 +1,10 @@
 <div id="orc_toolbar"></div>
-
-
 <script>
 
-    function toolbarLoaded(event) {
-        console.log('the toolbar has been loaded!!')
-        // console.log(event.toolbar)
-    }
+    function toolbarLoaded(extra) {
 
+    }
     $(function () {
-        orcmanager.viewController.sync(toolbarLoaded)
+        //orcmanager.viewController.sync(toolbarLoaded)
     })
 </script>
