--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Support Safepremium Group Apps </title>
     <link href="//fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="css/fontawesome/fontawesome-all.css?ver=1.01" rel="stylesheet">
     <link href="css/w2ui/w2ui-1.5.rc1.min.css?ver=1.01" rel="stylesheet" type="text/css" media="screen" />
     <link href="css/index.css" rel="stylesheet" type="text/css" media="screen"  />    
-    <script src="js/jquery/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/semantic/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic/calendar.css">
+
+    <script src="js/jquery/jquery-3.3.1.min.js"></script>
+    
+    <script src="js/semantic/semantic.min.js"></script>
+    <script src="js/semantic/calendar.js"></script>
     <script src="js/w2ui/w2ui-1.5.rc1.js"></script>
     <script src="js/index.js"></script>
     
